# RK3588_LLM

./: .gitignore  .gitmodules  README.md  run_benchmark.py
benchmark/: config.py  dataset.py  gui_app.py  parser.py  reporter.py  runner.py
benchmark/engine/: __init__.py  base_engine.py  text_engine.py  vlm_engine.py
benchmark/profiler/: cpu_tracker.py  memory_tracker.py
conf/: models_config.yaml
data/benchmark/: text_prompts.json
demos/: CMakeLists.txt
docs/: 00_README_docs.md  01_environment_setup.md  02_dependencies.md  03_model_acquisition.md  04_run_text_llm.md  05_run_multimodal_vlm.md  06_benchmark_guide.md  07_feasibility_report.md  benchmark_guide.md  dependencies.md  export.md  final_report.md
export/rkllm/: export_file.py
export/vlm/: export_rkllm.py
results/: FINAL_REPORT.md  benchmark_log.md
scripts/: README_model_converter.md  build_all_vlm.sh  build_text_llm_demo.sh  fix_freq_rk3588.sh  monitor_perf.sh  run_all_vlm_benchmarks.sh  run_vlm_benchmark.sh
scripts/converter/: model_converter.py
scripts/llm/: build_text_llm_demo.sh
scripts/vlm/: build_vlm_demo.sh
